@startuml Diagrama_Clases_Arduino

title Diagrama de Clases - Sistema Arduino IR

class arduinoc {
    +main(String[]) : void
}

class pantallainicial1 {
    -frame2 : Pantalla2
    +botonInicio : JButton
    +etiquetaNumero : JLabel
    +pantallainicial1()
    +getPantalla2() : Pantalla2
    +mostrarNumero(String) : void
}

class Pantalla2 {
    -displayLabel : JLabel
    -keyDisplayPanel : JPanel
    +Pantalla2()
    +mostrarNumero(String) : void
}

class MenuComando {
    +MenuComando(JFrame)
}

class HistoryDialog {
    +HistoryDialog(JFrame)
}

class DatabaseInitializer {
    +initializeDatabase() : void
}

class ArduinoDataDAO {
    +insertCodigo(String) : void
    +getCodigoCounts() : Map<String, Integer>
}
' Relaciones entre clases
arduinoc --> pantallainicial1
arduinoc --> DatabaseInitializer
arduinoc --> ArduinoDataDAO
pantallainicial1 *--> Pantalla2
pantallainicial1 --> MenuComando
MenuComando --> HistoryDialog
HistoryDialog --> ArduinoDataDAO

@enduml
